# sango

./: README.md  setup.cfg  setup.py
sango/: __init__.py  _ext.py  _nodes.py  _std.py  ext.py  nodes.py  process.py  states.py  std.py  test_ext.py  test_nodes.py  test_states.py  test_std.py  test_vars.py  vars.py  visitors.py
sango/_mods/: __init__.py  ext.py  nodes.py  std.py  test_ext.py  test_nodes.py  test_std.py  utils.py  vars.py
sango/examples/: play_state.py
