[metadata]
name = sango-short-greg
version = 0.1.0
author = Greg Short
description = A behavior tree library for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/short-greg/sango
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
